fixed nav responsive design button iphone

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -147,9 +147,7 @@ px      68    160    252    344    436    528    620    712    */
     width: 49%;
   }
 
-  #message .block {
-    float: left;
-  }
+ 
   /*---------------------------------------------
 					contact close 
 -----------------------------------------------*/
