--- a/public/css/style.css
+++ b/public/css/style.css
@@ -755,10 +755,10 @@ font header .navbar-default .navbar-nav li a:hover {
   display: inline-block;
 }
 .social-icons i {
-  color: #2C2C2C;
+  color: #002244;
   margin-right: 12px;
   margin-left: 12px;
-  font-size: 25px;
+  font-size: 50px;
 }
 .google-map {
   position: relative;
@@ -799,6 +799,11 @@ font header .navbar-default .navbar-nav li a:hover {
   display: inline-block;
   padding: 40px 0px;
 }
+
+ i:hover {
+  color: #fb4f14;
+}
+
 /*---------------------------------------------
 					Contact Close
 -----------------------------------------------*/
@@ -949,6 +954,7 @@ Contact form custom iphone */
        -o-transition: all 0.5s ease;
       -ms-transition: all 0.5s ease;
           transition: all 0.5s ease;
+          padding: 5px;
 }
 
 #tilt:hover {
@@ -1577,8 +1583,11 @@ ul#navbar1.navbar {
 }
 
 .home_img {
-  width: 100%;
+ 
   height: 100%;
+
+    padding-bottom: 8px;
+    margin-right: 25px;
 }
 
 @media (min-width: 769px) {
@@ -1902,30 +1911,44 @@ ul#navbar1.navbar #btn5 a:focus .arrow {
 /*Get quote button*/
 
 a.getquotebtn {
-  -webkit-transition: all 600ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  -moz-transition: all 600ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  -ms-transition: all 400ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  -o-transition: all 500ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  transition: all 500ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  display: block;
-  font-weight: bold;
-  max-width: 180px;
-  text-decoration: none;
-  border-radius: 4px;
-  padding: 20px 42px;
-  background-color: #FB4F18;
-  opacity: 0.8;
-  color: rgba(30, 22, 54, 0.6);
-  box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
+     -webkit-transition: all 600ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    -moz-transition: all 600ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    -ms-transition: all 400ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    -o-transition: all 500ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    transition: all 500ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    display: block;
+    /* font-weight: bold; */
+    max-width: 229px;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 20px 42px;
+    
+    opacity: 0.8;
+
+    
+    box-shadow: rgba(30, 22, 54, 0.4) 0px 0px 0px 2px;
+    border-color: rgba(30, 22, 54, 0.6);
+    background-color: transparent;
+    margin-left: 50px;
+    border: 2px solid white;
+    color: white;
 }
+a.getquotebtn:hover {
+  color: #FB4F14;
+  background: #002244;
+  border-color: #fb4f14;
+}
+
+
+
+
+
 
 #first {
   margin: 20px auto;
 }
-a.getquotebtn:hover {
-  color: rgba(255, 255, 255, 0.85);
-  background:  #002244;
-}
+
+
 
 @media (min-width: 992px) {
   .col-md-3 {
@@ -2013,3 +2036,10 @@ i {
     max-width: 800px;
   }
 }
+
+
+
+
+
+
+
